--- a/1htmlquiz/index.css
+++ b/1htmlquiz/index.css
@@ -3,4 +3,14 @@ body {
 				font-family: "futura","helvetica", "Arial", sans-serif;
 			}
 
-			.class
+	.K-Pop { 
+		color: red; 
+	}
+
+	.Pop {
+		color: orange;
+	}
+
+	.Hiphop {
+		color: yellow;
+	}
