--- a/index.css
+++ b/index.css
@@ -1,15 +1,11 @@
 body { 
-	background-color: green;
+	background-color: #FF8C00;
 }
 
-h1 {
-	color: white;
+a {
 	text-align: center;
 	font-family: sans-serif;
-}
-
-h2 {
-	color: white;
-	text-align: center;
-	font-family: sans-serif;
+	text-decoration: none;
+	font-size: 24pt;
+	line-height: 50pt;
 }
