--- a/index.css
+++ b/index.css
@@ -1,11 +1,19 @@
 body { 
-	background-color: #FF8C00;
+	background-color: #f3b581;
 }
 
-a {
+.project {
 	text-align: center;
-	font-family: sans-serif;
+	font-family: futura;
 	text-decoration: none;
 	font-size: 24pt;
 	line-height: 50pt;
+}
+
+p {
+	font-family: futura;
+	font-weight: bold;
+	text-decoration: none;
+	text-align: center;
+	font-size: 50pt;
 }
