--- a/4coding-from-life/sketch-2/main.css
+++ b/4coding-from-life/sketch-2/main.css
@@ -1,12 +1,3 @@
-/*
-  Coding from Life – Sketch 2: fluid layout
-
-  For sketch 2 you'll be positioning elements relative to a fluid container. This
-  means you'll need to use percentages when positioning and sizingelements within
-  your frame.
-*/
-
-
 body {
   background-color: black;
 }
@@ -221,7 +212,7 @@ body {
   left: 50%;
   width: 15%;
   height: 23%;
-  background-color: white;
+  background-color: #efeaea;
   clip-path: polygon(32% 20%, 30% 37%, 24% 50%, 27% 62%, 37% 72%, 53% 73%, 64% 64%, 66% 49%, 63% 40%, 62% 21%, 47% 38%);
 }
 
@@ -229,10 +220,20 @@ body {
   position: absolute;
   width: 6%;
   height: 10%;
-  background-color: #efe2e2;
+  background-color: #dccece;
   border-radius: 0 56% 51% 62%;
   transform: rotate(45deg);
   margin-top: 28%;
   left: 54%;
+}
+
+.tail {
+  position: absolute;
+  width: 16%;
+  height: 27%;
+  background-color:#d2bdbd;
+  top: 35.8%;
+  left: 54.3%;
+  clip-path: polygon(26% 75%, 32% 59%, 41% 51%, 50% 57%, 40% 70%);
 }
 /* Your CSS goes here */
