--- a/index.css
+++ b/index.css
@@ -5,31 +5,22 @@ body {
 
 
 .seowon {
-	font-family: futura;
-	font-weight: bold;
+	font-family: georgia;
+	padding-left: 2%;
+	padding-top: ;
 	text-decoration: none;
 	text-align: left;
-	font-size: 10pt;
-}
-
-
-.projects {
-	padding-top: 5%;
-	text-align: center;
-	font-family: georgia;
-	text-decoration: none;
-	font-size: 40pt;
-	line-height: 50pt;
-	letter-spacing: 2pt;
+	font-size: 18pt;
 }
 
 .project {
 	padding-top: 5%;
-	text-align: center;
-	font-family: futura;
+	padding-left: 20%;
+	font-family: georgia;
+	font-weight: lighter;
 	text-decoration: none;
-	font-size: 24pt;
-	line-height: 50pt;
+	font-size: 35pt;
+	line-height: 56pt;
 }
 
 
