--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -1,7 +1,51 @@
 body {
-	background-color: grey;
+	background-color: white;
 }
 
-p {
+h1 {
 	font-family: futura;
+	text-align: center;
+	font-size: 50pt;
+	margin-top: 7%;
+}
+
+.button {
+	display: block;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    font-size: 22px;
+    color: grey;
+    text-align: center;
+    background: black;
+    text-decoration: none;
+    position: absolute;
+   	top: 2%;
+    left: 1.5%;
+}
+
+.background {
+	display: block;
+    width: 100%;
+    height: 100%;
+    color: black;
+    text-align: center;
+    background: black;
+    text-decoration: none;
+    position: absolute;
+   	top: 34%;
+    left: 0%;
+}
+
+.block1 {
+    display: block;
+    width: 20%;
+    height: 47%;
+    color: white;
+    text-align: center;
+    background: white;
+    text-decoration: none;
+    position: absolute;
+    top: 39%;
+    left: 3%;
 }
