--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -3,25 +3,32 @@ body {
 }
 
 h1 {
-	font-family: futura;
+    position: relative;
+	font-family: helvetica;
 	text-align: center;
 	font-size: 50pt;
-	margin-top: 7%;
+	margin-top: 9%;
+}
+.arrow-left {
+    position: absolute;
+    top: 2%;
+    width: 0; 
+    height: 0; 
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent; 
+    border-right: 20px solid black; 
+    left: 2%;
 }
 
-.button {
-	display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    font-size: 22px;
-    color: grey;
-    text-align: center;
-    background: black;
-    text-decoration: none;
+.arrow-right {
     position: absolute;
-   	top: 2%;
-    left: 1.5%;
+    top: 2%;
+    width: 0; 
+    height: 0; 
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent; 
+    border-left:20px solid black; 
+    right: 2%;
 }
 
 .background {
@@ -50,7 +57,7 @@ h1 {
     left: 3%;
 }
 
-.block1 {
+.block2 {
     display: block;
     width: 20%;
     height: 47%;
@@ -60,5 +67,5 @@ h1 {
     text-decoration: none;
     position: absolute;
     top: 39%;
-    left: 10%;
+    left: 28%;
 }
