--- a/7_html-css-puzzles/puzzle-6/main.css
+++ b/7_html-css-puzzles/puzzle-6/main.css
@@ -1,1 +1,43 @@
-/* Your styles go here */
+@font-face {font-family: "KronaOne-Regular"; src: url("../fonts/Krona_One/KronaOne-Regular.ttf"); }
+
+.content {
+	font-family: "KronaOne-Regular";
+	font-weight: bold;
+}
+
+.black {
+	font-family: "KronaOne-Regular";
+	font-size: 90px;
+	font-weight: bolder;
+	letter-spacing: 2px;
+	line-height: 110px;
+	display: flex;
+	padding-left: 3%;
+
+}
+
+span {
+	color:red;
+}
+
+.red {
+	position: absolute;
+	font-family: "KronaOne-Regular";
+	font-size: 90px;
+	font-weight: bolder;
+	color: #EB3636;
+	letter-spacing: 2px;
+	line-height: 110px;
+	padding-left: 42%;
+}
+
+
+.regular {
+	font-family: sans-serif;
+	font-size: 15px;
+	display: flex;
+	top: 10%;
+	padding-left: 3%;
+
+	
+
