--- a/7_html-css-puzzles/puzzle-4/main.css
+++ b/7_html-css-puzzles/puzzle-4/main.css
@@ -1,1 +1,40 @@
-/* Your styles go here */
+body { width: 100%, height: 100%; 
+}
+
+.rect {
+	width: 20%;
+	height:15%;
+	background-color: #26AFCB;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.square {
+	width: 15%;
+	height: 33.33%;
+	background-color: #323AA6;
+}
+
+.one {
+	position: absolute;
+	left: 85%;
+	bottom: 0;	
+}
+
+.two {
+	position: absolute;
+	left: 0%;
+	bottom: 0;	
+}
+
+.three {
+	position: absolute;
+	left: 85%;
+}
+
+.four {
+	position: absolute;
+	left: 0%;
+}
