--- a/7_html-css-puzzles/puzzle-6/main.css
+++ b/7_html-css-puzzles/puzzle-6/main.css
@@ -1,43 +1,30 @@
-@font-face {font-family: "KronaOne-Regular"; src: url("../fonts/Krona_One/KronaOne-Regular.ttf"); }
-
-.content {
-	font-family: "KronaOne-Regular";
-	font-weight: bold;
+body {
+	width: 100%, height:100%; margin: 4%
 }
 
-.black {
-	font-family: "KronaOne-Regular";
-	font-size: 90px;
-	font-weight: bolder;
-	letter-spacing: 2px;
-	line-height: 110px;
-	display: flex;
-	padding-left: 3%;
-
+h1 {
+	font-family: 'Krona One', sans-serif;
+	font-size: 80pt;
+	margin: 0;
 }
 
 span {
-	color:red;
+	color: red;
 }
 
-.red {
-	position: absolute;
-	font-family: "KronaOne-Regular";
-	font-size: 90px;
-	font-weight: bolder;
-	color: #EB3636;
-	letter-spacing: 2px;
-	line-height: 110px;
-	padding-left: 42%;
+p {
+	font-family: sans-serif, bold;
+	font-size: 16pt;
 }
 
+@media (max-width: 500px) {
 
-.regular {
-	font-family: sans-serif;
-	font-size: 15px;
-	display: flex;
-	top: 10%;
-	padding-left: 3%;
+	h1 {
+	font-size: 24pt;
+	}
 
-	
+	p {
+		font-size: 9pt;
+	}
 
+}
