--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -1,5 +1,5 @@
 body {
-	background-color: white;
+	background-color: black;
 }
 
 h1 {
@@ -8,15 +8,53 @@ h1 {
 	text-align: center;
 	font-size: 50pt;
 	margin-top: 9%;
+    color: white;
+    margin-bottom: 10%;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+.flex-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 18pt;
+}
+
+.flex-container > div {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    width: 20%;
+    margin: 10px;
+    text-align: center;
+    padding-top: 13%;
+    padding-bottom: 13%;
+    font-family: helvetica;
+    line-height: 20px;
+    font-size: 2.5vw;
+    line-height: 3vw;
+}
+
+.stack {
+    left: 7.5%;
+    position: absolute;
+    width: 19%;
+    height: 20%;
+    top: 20%;
+    border: 0.1pt solid gray;
+    background-color: white;
+}
+
 .arrow-left {
     position: absolute;
     top: 2%;
     width: 0; 
-    height: 0; 
+    height: 0;  
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent; 
-    border-right: 20px solid black; 
+    border-right: 20px solid white; 
     left: 2%;
 }
 
@@ -27,45 +65,6 @@ h1 {
     height: 0; 
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent; 
-    border-left:20px solid black; 
+    border-left:20px solid white; 
     right: 2%;
-}
-
-.background {
-	display: block;
-    width: 100%;
-    height: 100%;
-    color: black;
-    text-align: center;
-    background: black;
-    text-decoration: none;
-    position: absolute;
-   	top: 34%;
-    left: 0%;
-}
-
-.block1 {
-    display: block;
-    width: 20%;
-    height: 47%;
-    color: white;
-    text-align: center;
-    background: white;
-    text-decoration: none;
-    position: absolute;
-    top: 39%;
-    left: 3%;
-}
-
-.block2 {
-    display: block;
-    width: 20%;
-    height: 47%;
-    color: white;
-    text-align: center;
-    background: white;
-    text-decoration: none;
-    position: absolute;
-    top: 39%;
-    left: 28%;
 }
