--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -12,10 +12,55 @@ h1 {
     margin-bottom: 10%;
 }
 
+.movietitle {
+    position: relative;
+    font-family: helvetica;
+    text-align: center;
+    font-size: 20pt;
+    margin-top: 6%;
+    color: white;
+    margin-bottom: 5%;
+}
+
 a {
     text-decoration: none;
     color: black;
 }
+
+.poster1 {
+    position: absolute;
+    display: block;
+    margin-left: 19%;
+    margin-right: auto;
+    max-width: 50%;
+}
+
+.korean {
+    font-family: helvetica;
+    color: white;
+    position: relative;
+    margin-left: 0%;
+    margin-right: auto;
+}
+
+.poster2 {
+    position: absolute;
+    display: block;
+    margin-left: 51%;
+    margin-right: auto;
+    max-width: 50%;
+    padding-bottom: 3%;
+}
+
+.head {
+    position: relative;
+    font-family: helvetica;
+    text-align: center;
+    font-size: 50pt;
+    margin-top: 9%;
+    margin-bottom: 0%;
+}
+
 .flex-container {
     display: flex;
     justify-content: center;
@@ -47,7 +92,32 @@ a {
     background-color: white;
 }
 
+.column-left {
+    float: left;
+    position: absolute;
+    color: white;
+    font-family: helvetica;
+    font-weight: lighter;
+    font-size: 2.5vw;
+    margin-top: 50%;
+    left: 20%;
+}
+
+.column-right {
+    width: 50%;
+    height: auto;
+    margin-top: 40%;
+    position: absolute;
+    background-color: red;
+    color: white;
+    font-family: helvetica;
+    font-weight: lighter;
+    font-size: 1.5vw;
+    left: 40%;
+}
+
 .arrow-left {
+
     position: absolute;
     top: 2%;
     width: 0; 
