--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -29,8 +29,8 @@ a {
 
 .poster1 {
     position: absolute;
-    display: block;
-    margin-left: 19%;
+    display: inline-block;
+    margin-left: 20%;
     margin-right: auto;
     max-width: 50%;
 }
@@ -71,11 +71,11 @@ a {
     display: flex;
     justify-content: center;
     background-color: white;
-    width: 20%;
+    width: 18%;
     margin: 10px;
     text-align: center;
-    padding-top: 13%;
-    padding-bottom: 13%;
+    padding-top: 12%;
+    padding-bottom: 12%;
     font-family: helvetica;
     line-height: 20px;
     font-size: 2.5vw;
