--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -27,12 +27,26 @@ a {
     color: black;
 }
 
-.poster1 {
-    position: absolute;
-    display: inline-block;
-    margin-left: 20%;
-    margin-right: auto;
-    max-width: 50%;
+.centeredposter {
+    display: flex;
+    justify-content: space-around;
+    max-width: 30%;
+    margin-left: 35%;
+    margin-bottom: 50px;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+}
+
+.poster {
+    width: 350px;
+    height: 480px;
+}
+
+.margin {
+    margin-right: 10px;
 }
 
 .korean {
@@ -43,14 +57,6 @@ a {
     margin-right: auto;
 }
 
-.poster2 {
-    position: absolute;
-    display: block;
-    margin-left: 51%;
-    margin-right: auto;
-    max-width: 50%;
-    padding-bottom: 3%;
-}
 
 .head {
     position: relative;
@@ -92,49 +98,14 @@ a {
     background-color: white;
 }
 
-.column-left {
-    float: left;
-    position: absolute;
+.white {
     color: white;
-    font-family: helvetica;
-    font-weight: lighter;
-    font-size: 2.5vw;
-    margin-top: 50%;
-    left: 20%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 20%;
 }
 
-.column-right {
-    width: 50%;
-    height: auto;
-    margin-top: 40%;
-    position: absolute;
-    background-color: red;
+.arrow {
     color: white;
-    font-family: helvetica;
-    font-weight: lighter;
-    font-size: 1.5vw;
-    left: 40%;
-}
-
-.arrow-left {
-
-    position: absolute;
-    top: 2%;
-    width: 0; 
-    height: 0;  
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent; 
-    border-right: 20px solid white; 
-    left: 2%;
-}
-
-.arrow-right {
-    position: absolute;
-    top: 2%;
-    width: 0; 
-    height: 0; 
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent; 
-    border-left:20px solid white; 
-    right: 2%;
+    font-size: 20px;
 }
