--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -27,13 +27,6 @@ a {
     color: black;
 }
 
-.centeredposter {
-    display: flex;
-    justify-content: space-around;
-    max-width: 30%;
-    margin-left: 35%;
-    margin-bottom: 50px;
-}
 
 .flex {
     display: flex;
@@ -41,8 +34,8 @@ a {
 }
 
 .poster {
-    width: 350px;
-    height: 480px;
+    width: 30%;
+    height: 50%;
 }
 
 .margin {
@@ -78,7 +71,7 @@ a {
     justify-content: center;
     background-color: white;
     width: 18%;
-    margin: 10px;
+    margin: 20px;
     text-align: center;
     padding-top: 12%;
     padding-bottom: 12%;
@@ -88,14 +81,9 @@ a {
     line-height: 3vw;
 }
 
-.stack {
-    left: 7.5%;
-    position: absolute;
-    width: 19%;
-    height: 20%;
-    top: 20%;
-    border: 0.1pt solid gray;
-    background-color: white;
+.two {
+    margin-top: 2%;
+    margin-right: %;
 }
 
 .white {
@@ -103,6 +91,20 @@ a {
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 20%;
+}
+
+.bold {
+    font-size: 2vw;
+    line-height: 1vw;
+    font-family: helvetica;
+    font-weight: 4s;
+}
+
+.regular {
+    font-size: 1.5vw;
+    line-height: 2vw;
+    font-family: helvetica;
+    font-weight: 1s;
 }
 
 .arrow {
