--- a/6_obsession/main.css
+++ b/6_obsession/main.css
@@ -1,18 +1,18 @@
-body {
-	background-color: black;
-}
-
-h1 {
+body {  
+    background-color: black;
+    }
+    
+    h1 {
     position: relative;
-	font-family: helvetica;
-	text-align: center;
-	font-size: 50pt;
-	margin-top: 9%;
+    font-family: helvetica;
+    text-align: center;
+    font-size: 50pt;
+    margin-top: 9%;
     color: white;
     margin-bottom: 10%;
-}
-
-.movietitle {
+    }
+    
+    .movietitle {
     position: relative;
     font-family: helvetica;
     text-align: center;
@@ -20,94 +20,126 @@ h1 {
     margin-top: 6%;
     color: white;
     margin-bottom: 5%;
-}
-
-a {
+    }
+    
+    a {
     text-decoration: none;
     color: black;
-}
-
-
-.flex {
+    }
+    
+    
+    .flex {
     display: flex;
     justify-content: center;
-}
-
-.poster {
+    }
+    
+    .poster {
     width: 30%;
     height: 50%;
-}
-
-.margin {
+    }
+    
+    .margin {
     margin-right: 10px;
-}
-
-.korean {
+    }
+    
+    .korean {
     font-family: helvetica;
     color: white;
     position: relative;
     margin-left: 0%;
     margin-right: auto;
-}
-
-
-.head {
+    }
+    
+    
+    .head {
     position: relative;
     font-family: helvetica;
     text-align: center;
     font-size: 50pt;
     margin-top: 9%;
     margin-bottom: 0%;
-}
-
-.flex-container {
+    }
+    
+    .flex-container {
     display: flex;
     justify-content: center;
     margin-bottom: 18pt;
-}
-
-.flex-container > div {
-    display: flex;
-    justify-content: center;
+    }
+    
+    .flex-container > div {
     background-color: white;
     width: 18%;
     margin: 20px;
     text-align: center;
-    padding-top: 12%;
-    padding-bottom: 12%;
     font-family: helvetica;
     line-height: 20px;
     font-size: 2.5vw;
     line-height: 3vw;
-}
-
-.two {
+    }
+    
+    .two {
     margin-top: 2%;
     margin-right: %;
-}
-
-.white {
+    }
+    
+    .white {
     color: white;
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 20%;
-}
-
-.bold {
+    }
+    
+    .bold {
     font-size: 2vw;
     line-height: 1vw;
     font-family: helvetica;
     font-weight: 4s;
-}
-
-.regular {
+    }
+    
+    .regular {
     font-size: 1.5vw;
     line-height: 2vw;
     font-family: helvetica;
     font-weight: 1s;
-}
-
-.arrow {
+    }
+    
+    .arrow {
     color: white;
     font-size: 20px;
-}
+    }
+    
+    .poster-stack {
+    display: block;
+    position: relative;
+    }
+    
+    .poster-stack-item {
+    border-top: 2px solid #C7C7C7;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 29vw;
+    background-color: white;
+    }
+    
+    .poster-stack-item-with-title {
+    position: relative;
+    }
+    
+    .poster-stack-item-1 { top: 0px; }
+    .poster-stack-item-2 { top: 8px; }
+    .poster-stack-item-3 { top: 16px; }
+    .poster-stack-item-4 { top: 24px; }
+    .poster-stack-item-5 { top: 32px; }
+    .poster-stack-item-6 { top: 40px; }
+    .poster-stack-item-7 { top: 48px; }
+    .poster-stack-item-8 { top: 56px; }
+    .poster-stack-item-9 { top: 64px; }
+    
+    .poster-stack-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    }
