--- a/10_archive/main.css
+++ b/10_archive/main.css
@@ -1,31 +1,46 @@
 .head {
 	font-family: helvetica;
+	text-align: center;
+	font-weight: 300;
 	font-size: 5vw;
 	color: #E3BEC1;
 	padding-bottom: 1%;
+	padding-top: 2%;
 }
 
 .subhead {
-	top: 1%;
+	text-align: center;
 	font-family: helvetica;
-	font-size: 3vw;
-	padding-bottom: 20%;
-	padding-top: 5%;
-}
-
-.number {
-	text-align: left;
-	font-family: helvetica;
-	font-size: 4vw;
+	font-size: 6vw;
 	padding-bottom: 3%;
 	color: black;
 	font-weight: 600;
 }
 
-.subsubhead {
+.toptext{
+	top: 1%;
+	font-family: helvetica;
+	font-size: 3vw;
+	font-weight: 300;
+	padding-bottom: 20%;
+	padding-top: 5%;
+}
+
+.number {
+	padding-top: 2%;
+	text-align: left;
+	font-family: helvetica;
+	font-size: 4vw;
+	padding-bottom: 3%;
+	color: black;
+	font-weight: 500;
+}
+
+.text{
 	text-align: center;
 	font-family: helvetica;
 	font-size: 3vw;
-	padding-top: 10%;
+	font-weight: 300;
+	padding-top: 5%;
 	color: #474141;
 }
