--- a/13_dream/main.css
+++ b/13_dream/main.css
@@ -14,3 +14,42 @@ body {
 	font-family: 'alarm_clock', sans-serif;
 }
 
+.waveform-container {
+	position: relative;
+	margin-top: 100px;
+	width: 100%;
+}
+
+.waveform {
+	position: relative;
+	width: 80%;
+	height:  100px;
+	top: 0;
+	float: right;
+}
+
+.button {
+	position: relative;
+	top: 40px;
+	left: 50px;
+	border: 0;
+	background: transparent;
+	box-sizing: border-box;
+	width: 20px;
+	height: 3vw;
+	border-color: transparent transparent transparent white;
+	transition: 100ms all ease;
+	cursor: pointer;
+	border-style: solid;
+	border-width: 1.5vw 0 1.5vw 2.5vw;
+}
+
+.button.paused {
+	border-style: double;
+	border-width: 0vw 0 0vw 3vw;
+}
+
+.button:hover {
+  border-color: transparent transparent transparent #9FAEB3;
+}
+
